--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <aside>
 
-<h2>" Viva a intensidade roxa, <span>Açaí Terra Roxa.</span>"</h2>
+<h2>" Vva a intensidade roxa, <span>Açaí Terra Roxa.</span>"</h2>
 
 
 
